crates/gitty/tests/snapshots/render__220_github-dark_style.snap
---
source: crates/gitty/tests/render.rs
assertion_line: 200
expression: digest(&b)
---
 0 7:2f81f7/161b22 12:e6edf3/161b22 4:d29922/161b22 3:39c5cf/161b22 169:e6edf3/161b22 11:7d8590/161b22 2:e6edf3/161b22 11:2f81f7/161b22 1:e6edf3/161b22
 1 1:e6edf3/0d1117 7:2f81f7/0d1117 4:7d8590/0d1117 43:e6edf3/0d1117 1:30363d/0d1117 164:e6edf3/0d1117
 2 1:e6edf3/0d1117 1:d29922/0d1117 1:e6edf3/0d1117 20:7d8590/0d1117 18:e6edf3/0d1117 6:0d1117/2f81f7 1:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 3:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 1:e6edf3/0d1117 2:f85149/0d1117 10:e6edf3/0d1117 3:7d8590/0d1117 7:2f81f7/0d1117 3:7d8590/0d1117 2:3fb950/0d1117 3:f85149/0d1117 5:7d8590/0d1117 128:e6edf3/0d1117
 3 1:e6edf3/142a48 1:d29922/142a48 47:e6edf3/142a48 2:f85149/142a48 1:e6edf3/142a48 2:7d8590/142a48 1:e6edf3/142a48 165:30363d/0d1117
 4 28:e6edf3/0d1117 13:58a6ff/1b2c41 1:e6edf3/0d1117 6:d29922/302919 1:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 2:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 10:e6edf3/0d1117 15:7d8590/0d1117 102:e6edf3/0d1117
 5 45:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 6:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 1:e6edf3/1e2329 1:d29922/1e2329 28:e6edf3/1e2329 2:3fb950/1e2329 1:e6edf3/1e2329 2:f85149/1e2329 1:e6edf3/1e2329 1:30363d/0d1117 127:7d8590/121d2f
 6 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 4:7d8590/0d1117 2:e6edf3/0d1117 5:ff7b72/0d1117 52:e6edf3/0d1117 1:30363d/0d1117 4:7d8590/0d1117 2:e6edf3/0d1117 5:ff7b72/0d1117 52:e6edf3/0d1117
 7 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 4:7d8590/161a20 59:e6edf3/161a20 1:30363d/0d1117 3:56936a/173c24 1:56936a/12261e 59:e6edf3/12261e
 8 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 4:7d8590/161a20 59:e6edf3/161a20 1:30363d/0d1117 3:56936a/173c24 1:56936a/12261e 59:e6edf3/12261e
 9 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
10 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
11 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
12 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
13 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
14 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
15 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
16 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
17 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
18 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
19 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
20 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
21 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
22 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
23 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
24 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
25 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
26 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
27 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
28 55:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 127:e6edf3/0d1117
29 1:7d8590/161b22 3:2f81f7/161b22 7:7d8590/161b22 5:2f81f7/161b22 8:7d8590/161b22 3:2f81f7/161b22 7:7d8590/161b22 1:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 10:7d8590/161b22 1:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 7:7d8590/161b22 1:2f81f7/161b22 139:7d8590/161b22
