crates/gitty/tests/snapshots/render__changes_100_files.snap
---
source: crates/gitty/tests/render.rs
expression: s
---
 gitty repo  ⎇ main                                                    [1] Changes (3)  [2] History
 [~] 3 changed files
 [ ] A new file.txt
 [ ] M notes.txt
 [~] M src/main.rs
















────────────────────────────────────────────────────────────────────────────────────────────────────
 Update main.rs
 Description


 Co-authors Name <email>, …
  Commit 1 file to main

 space stage  a all  d discard  F filter  enter diff  2 history  ? help  q quit
