crates/gitty/tests/snapshots/render__files_100_tree.snap
---
source: crates/gitty/tests/render.rs
expression: s
---
 gitty repo  ⎇ main                                         [1] Changes (1)  [2] History  [3] Files
 Files
 ▾ src/
     lib.rs
     main.rs
 ▸ target/
   .env (secret)
   .gitignore
   data.bin
   link -> src/main.rs                                                                            A
   README.md


















 j/k move  h/l fold  enter open  e edit  v reveal  2 history  ? help  q quit  i ignored
