crates/gitty/tests/snapshots/render__files_100_viewer.snap
---
source: crates/gitty/tests/render.rs
expression: s
---
 gitty repo  ⎇ main                                         [1] Changes (1)  [2] History  [3] Files
 src/main.rs  34 lines
  1 use std::io;
  2
  3 fn main() {
  4     step(0);
  5     step(1);
  6     step(2);
  7     step(3);
  8     step(4);
  9     step(5);
 10     step(6);
 11     step(7);
 12     step(8);
 13     step(9);
 14     step(10);
 15     step(11);
 16     step(12);
 17     step(13);
 18     step(14);
 19     step(15);
 20     step(16);
 21     step(17);
 22     step(18);
 23     step(19);
 24     step(20);
 25     step(21);
 26     step(22);
 27     step(23);
 j/k scroll  h/l sideways  e edit  v reveal  esc back  ? help
