crates/gitty/tests/snapshots/render__files_140_tree.snap
---
source: crates/gitty/tests/render.rs
expression: s
---
 gitty repo  ⎇ main                                                                                 [1] Changes (1)  [2] History  [3] Files
 Files                                    │ src/main.rs  34 lines
 ▾ src/                                   │  1 use std::io;
     lib.rs                               │  2
     main.rs                              │  3 fn main() {
 ▸ target/                                │  4     step(0);
   .env (secret)                          │  5     step(1);
   .gitignore                             │  6     step(2);
   data.bin                               │  7     step(3);
   link -> src/main.rs                  A │  8     step(4);
   README.md                              │  9     step(5);
                                          │ 10     step(6);
                                          │ 11     step(7);
                                          │ 12     step(8);
                                          │ 13     step(9);
                                          │ 14     step(10);
                                          │ 15     step(11);
                                          │ 16     step(12);
                                          │ 17     step(13);
                                          │ 18     step(14);
                                          │ 19     step(15);
                                          │ 20     step(16);
                                          │ 21     step(17);
                                          │ 22     step(18);
                                          │ 23     step(19);
                                          │ 24     step(20);
                                          │ 25     step(21);
                                          │ 26     step(22);
                                          │ 27     step(23);
 j/k move  h/l fold  enter open  e edit  v reveal  i ignored  2 history  ? help  q quit
